// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectMultiple> Snapshots and structure should render chips 1`] = `
<div
  className="lumx-select lumx-select--has-multiple lumx-select lumx-select--is-empty lumx-select--theme-light"
>
  <SelectMultipleField
    anchorRef={
      Object {
        "current": null,
      }
    }
    handleKeyboardNav={[Function]}
    hasError={false}
    isEmpty={true}
    isValid={false}
    targetUuid="uuid"
    theme="light"
    value={Array []}
    variant="chip"
  />
  <Dropdown
    anchorRef={
      Object {
        "current": null,
      }
    }
    closeOnClick={false}
    closeOnClickAway={true}
    closeOnEscape={true}
    isOpen={false}
    onClose={[Function]}
    placement="bottom-start"
  >
    <span>
      Select Component
    </span>
  </Dropdown>
</div>
`;

exports[`<SelectMultiple> Snapshots and structure should render defaults 1`] = `
<div
  className="lumx-select lumx-select--has-multiple lumx-select lumx-select--is-empty lumx-select--theme-light"
>
  <SelectMultipleField
    anchorRef={
      Object {
        "current": null,
      }
    }
    handleKeyboardNav={[Function]}
    hasError={false}
    isEmpty={true}
    isValid={false}
    targetUuid="uuid"
    theme="light"
    value={Array []}
    variant="input"
  />
  <Dropdown
    anchorRef={
      Object {
        "current": null,
      }
    }
    closeOnClick={false}
    closeOnClickAway={true}
    closeOnEscape={true}
    isOpen={false}
    onClose={[Function]}
    placement="bottom-start"
  >
    <span>
      Select Component
    </span>
  </Dropdown>
</div>
`;
